# poetry-docker-playground

./: .gitignore  README.md
01-hello-world/: pyproject.toml
01-hello-world/hello_world/: main.py
01-hello-world/tests/: test_hello_world.py
01-hello-world/tests/unit/: test_main.py
01-template-base/: .pylintrc  README.md  pyproject.toml
01-template-base/template_base/: __init__.py
01-template-base/tests/unit/: test_template_base.py
02-hello-fastapi/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py  healthcheck.sh  logging.conf  pyproject.toml
02-hello-fastapi/hello_fastapi/: __init__.py  healthcheck.py  main.py
02-hello-fastapi/tests/integration/: fastapi_tests.py
02-hello-fastapi/tests/unit/: test_hello_fastapi.py  test_main.py
