[tool.poetry]
name = "02-hello-fastapi"
version = "0.1.0"
description = "Projeto com modelo de pasta para uso com Python"
repository = "https://github.com/vndmtrx/poetry-fastapi-container"
authors = ["Eduardo Rolim <vndmtrx@duck.com>"]
readme = "README.md"
packages = [{include = "hello_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^21.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-profiling = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
taskipy = "^1.12.0"
pylint = {extras = ["spelling"], version = "^2.17.5"}

[tool.pytest.ini_options]
python_files = ["test*.py", "*tests.py"]
python_functions = ["*_test"]
python_classes = ["*Test"]
testpaths = ["tests/unit", "tests/integration"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
uvicorn = {cmd = "export PYTHONDONTWRITEBYTECODE=1; poetry run uvicorn hello_fastapi.main:app --reload", help = "Roda o projeto usando uvicorn"}

test = {cmd = "export PYTHONDONTWRITEBYTECODE=1; pytest -x -p no:cacheprovider", help = "Roda os testes e aborta se houver falha."}
profile = {cmd = "export PYTHONDONTWRITEBYTECODE=1; pytest --profile-svg -p no:cacheprovider", help = "Roda testes e entrega um relatório de cobertura do código."}
cov = {cmd = "export PYTHONDONTWRITEBYTECODE=1; pytest --cov=hello_fastapi -p no:cacheprovider", help = "Roda testes e entrega um relatório de cobertura do código."}

pre_style = {cmd = "export PYTHONDONTWRITEBYTECODE=1; black hello_fastapi tests --diff --color --safe", help = "Mostra erros de estilo."}
style = {cmd = "export PYTHONDONTWRITEBYTECODE=1; black hello_fastapi tests --color --safe", help = "Faz a formatação do código."}

linter = {cmd = "export PYTHONDONTWRITEBYTECODE=1; pylint --recursive=y hello_fastapi", help = "Linter do código por inconsistências."}
genpylintrc = {cmd = "export PYTHONDONTWRITEBYTECODE=1; pylint --generate-rcfile > .pylintrc", help = "Criação do arquivo de configuração do pylint."}

pre_run_prod = {cmd="docker build --target prod -t local/prod:latest .", help=""}
run_prod = {cmd="docker run --rm -p 8000:8000 prod", help=""}

pre_run_dev = {cmd="docker build --target dev -t local/dev:latest .", help=""}
run_dev = {cmd="docker run --rm -p 8000:8000 local/dev", help=""}

clean = {cmd = "find . -not -path './.venv/*' | grep -E '(\\.coverage$|\\.pytest_cache$|prof$|dist$|__pycache__|\\.py[co]$)' | xargs rm -rf", help = "Limpa o projeto de arquivos gerados automaticamente."}
prune = {cmd = "find . -not -path './.venv/*' | grep -E '(\\.venv|\\.coverage$|\\.pytest_cache$|prof$|dist$|__pycache__|\\.py[co]$)' | xargs rm -rf", help = "Limpa o projeto de arquivos gerados automaticamente."}